fixed -- elementor-add-section-area-button spacing for lower el lower version

--- a/assets/admin/css/eael-templately-promo.css
+++ b/assets/admin/css/eael-templately-promo.css
@@ -9,7 +9,7 @@
 	height: 12px;
 }
 
-.elementor-add-new-section .elementor-add-section-area-button {
+body .elementor-add-new-section .elementor-add-section-area-button {
 	margin-left: 0;
 }
 
